--- a/_posts/2024-05-07-clml.md
+++ b/_posts/2024-05-07-clml.md
@@ -153,7 +153,12 @@ _styles: >
     border-bottom: 1px solid #aaa;
     margin-bottom: .5em;
   }
+  html[data-theme='dark'] d-article blockquote {
+    border-left-color: #f1c40f;
+  }
 ---
+
+## Introduction
 
 The paper, accepted as Long Oral at ICML 2022, discusses the *(log) marginal likelihood (LML)* in detail: its advantages, use-cases, and potential pitfalls, with an extensive review of related work. It further suggests using the “*conditional (log) marginal likelihood (CLML)*” instead of the LML and shows that it captures the quality of generalization better than the LML.
 
@@ -177,7 +182,7 @@ Overall, the paper looks at many more settings, particularly deep kernel learnin
 👁️‍🗨️ This review is based on [v1 of the paper](https://arxiv.org/abs/2202.11678v1)<d-cite key="lotfi2022bayesian"></d-cite>. After reaching out to the authors, they have [updated the paper, expanded the discussion section](/assets/2024-05-07/bmsmlg_v1_v2_version_comparison.pdf), and replied to a draft of this post. Two drafts were shared with the authors (on 2022/5/30 & 31, respectively) before their reply (on 2022/6/3), and their comments refer to the first draft. This post is the second draft, except for minor edits. Additional boxes have been added and marked with "👁️‍🗨️" to refer to the authors' response, which is included at the end and augmented with additional thoughts given the updated experiments.
 </aside>
 
-# Details
+## Details
 
 | | Bayesian Model Selection, the Marginal Likelihood, and Generalization |
 | :---        |    :----  |
@@ -199,7 +204,7 @@ Overall, the paper looks at many more settings, particularly deep kernel learnin
 ```
 </details>
 
-# Why?
+## Why?
 
 <style>
 d-article aside {
@@ -242,11 +247,6 @@ margin-bottom: .5em;
 
 The marginal likelihood, also known as model evidence $$p(\mathcal{D} \mid \mathcal{M}_i)$$ for different hypotheses $$\mathcal{M}_i$$, captures this notion. **Other things considered equal,** the highest model evidence points us towards the best hypothesis given data $$\mathcal{D}$$. The paper cites [an illustrative example from chapter 28](https://www.inference.org.uk/itprnn/book.pdf#page=355) of David MacKay’s ["Information Theory, Inference, and Learning Algorithms”](http://www.inference.org.uk/mackay/itila/book.html):
 
-{% include figure.html path="assets/img/2024-05-07-clml/bmsmlg_sec4.1.png" class="img-fluid" %}
-<div class="caption" markdown="1">
-The marginal likelihood answers the question “what is the probability that a prior model generated the training data?”. This question is subtly different from asking “how likely is the posterior, conditioned on the training data, to have generated withheld points drawn from the same distribution?”. Although the marginal likelihood is often used as a proxy for generalization (e.g. MacKay, 1992c; Immer et al., 2021; Daxberger et al., 2021), it is the latter question we wish to answer in deciding whether a model will provide good generalization performance."
-</div>
-
 {% capture caption %}
 Excerpt from page 343 in David MacKay’s "Information Theory, Inference, and Learning Algorithms.”
 {% endcapture %}
@@ -264,11 +264,11 @@ And overall:
 
 > There is a great need for a more comprehensive exposition, clearly demonstrating the limits of the marginal likelihood, while acknowledging its unique strengths, **especially given the rise of the marginal likelihood in deep learning.**
 
-# How?
+## How?
 
 Following the paper, this post will summarize some of the different sections here. 
 
-## Use-cases
+### Use-cases
 
 Given the above, the case for the marginal likelihood in the paper focuses on:
 
@@ -276,7 +276,7 @@ Given the above, the case for the marginal likelihood in the paper focuses on:
 - hyperparameter learning; and
 - constraint learning.
 
-## General Pitfalls
+### General Pitfalls
 
 For the paper, the pitfalls are manifold. The most important is the claim that:
 
@@ -285,13 +285,14 @@ For the paper, the pitfalls are manifold. The most important is the claim that:
 
 The following explanation is helpful:
 
-{% capture caption %}
+{% capture title %}
 The marginal likelihood answers the question “what is the probability that a prior model generated the training data?”. This question is subtly different from asking “how likely is the posterior, conditioned on the training data, to have generated withheld points drawn from the same distribution?”. Although the marginal likelihood is often used as a proxy for generalization (e.g. MacKay, 1992c; Immer et al., 2021; Daxberger et al., 2021), it is the latter question we wish to answer in deciding whether a model will provide good generalization performance."
 {% endcapture %}
+{% assign title = title | xml_escape %}
 {% capture max-width %}
 " style="max-width: 25em;
 {% endcapture %}
-{% include figure.html path="assets/img/2024-05-07-clml/bmsmlg_sec4.1.png" class="img-fluid" max-width=max-width caption=caption%}
+{% include figure.html path="assets/img/2024-05-07-clml/bmsmlg_sec4.1.png" class="img-fluid" max-width=max-width title=title%}
 
 <aside class="box-note l-body" markdown="1">
 ⚠️ The first question might be mistaken for asking what the probability is of drawing the training data independently from a fixed prior, which is what the second question is about: what is the average performance of the *marginal predictions* for test data given the training data?
@@ -330,7 +331,7 @@ So, in hypothesis testing, we want to determine which model class (hypothesis) p
 ☝ Interestingly, according to Occam's razor, both should be related: the model class that provides the simplest explanation for the current training data should also generalize the best.
 </aside>
 
-## Estimating LML via the Laplace Approximation
+### Estimating LML via the Laplace Approximation
 
 Computing the marginal likelihood via sampling is generally intractable for (B)NNs. Estimating it from a prior, usually highly uninformative distribution leads to high-variance estimates when performing Monte Carlo sampling compared to sampling from the posterior distribution, which is more practical. The latter is the approach followed by the paper for the CLML using a Laplace approximation of the posterior.
 
@@ -352,7 +353,7 @@ The paper notes that the LA has drawbacks: it only captures uncertainty around a
 This is of particular importance for overparameterized models like DNNs, which have multiple diverse modes, as we know from deep ensembles ([Wilson, Izmailov (2021, blog post)](https://cims.nyu.edu/~andrewgw/deepensembles/);  [Wilson, Izmailov (2020)](https://arxiv.org/abs/2002.08791)<d-cite key="wilson2020bayesian"></d-cite>). The LA, however, only centers around a single one. 
 
 
-## Conditional Marginal Likelihood
+### Conditional Marginal Likelihood
 
 Given that the LML does not capture generalization, i.e., is not suited for model selection according to the paper but intended for hypothesis testing, the paper introduces the **conditional log marginal likelihood (CLML)**. 
 
@@ -366,7 +367,7 @@ $$
 \end{aligned}
 $$
 
-following notation also used by Lyle et al. (2020).
+following notation also used by Lyle et al. (2020)<d-cite key="lyle2020bayesian"></d-cite>.
 
 The paper notes that depending on the underlying model $$\mathcal{M}$$, the first $$m$$ terms might be very low without affecting the model's generalization capabilities later after seeing more data and advocates for dropping these terms from the sum above:
 
@@ -391,9 +392,9 @@ We will refer to this and other prior literature below.
 ⚠️ Given the generally assumed exchangeability of training data in Bayesian models, the ordering of the training data using indices $$i$$ is arbitrary. As the paper points out, the CLML depends on this arbitrary data order, and thus a permutation-invariant version of the CLML is proposed by averaging over different permutations. For larger experiments, this becomes very expensive, and the paper uses a single permutation instead (as noted in appendix D).
 </aside>
 
-The paper examines how the CLML performs compared to the LML. It begins by critically reviewing Lyle et al. (2020).
+The paper examines how the CLML performs compared to the LML. It begins by critically reviewing Lyle et al. (2020)<d-cite key="lyle2020bayesian"></d-cite>.
 
-## On Training Speed and Learning Curves
+### On Training Speed and Learning Curves
 
 The paper then introduces a **learning curve** as the graph of how $$p(\mathcal{D}_n \mid \mathcal{D}_{<n}, \mathcal{M})$$ changes over $$n$$ (potentially, as average over different permutations of the data order to be permutation-invariant); see (c) below, and compares to [Lyle et al. (2020) “A Bayesian Perspective on Training Speed and Model Selection”](https://arxiv.org/abs/2010.14499)<d-cite key="lyle2020bayesian"></d-cite>. 
 
@@ -415,7 +416,7 @@ In particular, for neural networks, the paper reports the following interesting 
 
 (where **BMA** stands for **Bayesian Model Average**, i.e., marginalizing over the posterior parameters)
 
-# Model Selection
+## Model Selection
 
 To show the advantages of the CLML over the LML, the paper examines the correlation with the generalization performance of 25 CNN and ResNet architectures on CIFAR-10 and CIFAR-100:
 
@@ -428,10 +429,10 @@ The CLML is more strongly correlated with the generalization performance of the 
 
 The CLML is computed using predictions on the held-out data for parameter samples from the LA ("function space"), does not estimate the model entropy, and thus does not suffer from the same issues. 
 
-# And?
+## And?
 While the paper covers a lot more in its breadth, the second half mainly focuses on the CLML and examines the question of how the CLML is different from simply using a validation loss. Again, this is not a question directly examined in the paper, but given the prevalence of validation sets, it might be worth asking what the suggested method provides beyond that.
 
-## Ignoring Model Priors
+### Ignoring Model Priors
 
 First, from a Bayesian point of view, using the model evidence (LML) is only valid for model selection when the model prior is uniform **(i.e., all other things are considered equal):**
 
@@ -464,11 +465,11 @@ and we can drop $$H[\mathcal{D}]$$ as it is independent of the model.
 By ignoring the model complexity when we only use the LML, we might potentially ignore an essential part of Occam’s razor and the MDL principle.
 However, many other papers also ignore the model complexity and assume a uniform model prior. A uniform prior is valid, for example, when choosing specific hyperparameters. Moreover, estimating a model's description length is challenging and an open problem. However, the LML only makes sense for model selection when comparing models of equal complexity. 
 
-## Comparison to Prior Art
+### Comparison to Prior Art
 
 We expand on the prior art mentioned in the paper to be able to place it better in the relevant literature.
 
-### CLML vs Cross-validation
+#### CLML vs Cross-validation
 
 As noted in the paper, [Fong and Holmes (2020)’s “On the marginal likelihood and cross-validation”](https://arxiv.org/abs/1905.08737)<d-cite key="fong2020marginal"></d-cite> connects LML and leave-p-out cross-validation:
 
@@ -484,18 +485,18 @@ The paper finally defines something similar to the CLML:
 
 {% include figure.html path="assets/img/2024-05-07-clml/otmlacv_ccv.png" %}
 
-### CLML vs TSE-E
+#### CLML vs TSE-E
 
 While Lyle et al. (2020) focus on the sum under the learning curve as a proxy for the LML, they only note preliminary empirical evidence for a connection to generalization for DNNs.
-In the follow-up paper "Speedy Performance Estimation for Neural Architecture Search" by Ru et al. (2020), not cited here, the authors focus on using similar ideas for model selection.
+In the follow-up paper "Speedy Performance Estimation for Neural Architecture Search" by Ru et al. (2021)<d-cite key="ru2021speedy"></d-cite>, not cited by Lotfi et al (2022)<d-cite key="lotfi2022bayesian"></d-cite>, the authors focus on using similar ideas for model selection.
 
-In "Speedy Performance Estimation for Neural Architecture Search," they explain that:
+Ru et al. (2021) explain that:
 
 > we hypothesise that an estimator of network training speed that assigns higher weights to later epochs may exhibit a better correlation with the true generalisation performance of the final trained network" and evaluate training speed estimators which discount the initial terms and sum over a left-truncated learning curve, amongst others. 
 
-The particular estimator is referred to as TSE-E in the paper and shown to have a higher correlation with the generalization performance than the full-length TSE estimator, which is just a proxy for the LML from Lyle et al. (2020). Thus, the findings in this earlier paper are congruent with the CLML.
+The particular estimator is referred to as TSE-E in the paper and shown to have a higher correlation with the generalization performance than the full-length TSE estimator, which is just a proxy for the LML from Lyle et al. (2020)<d-cite key="lyle2020bayesian"></d-cite>. Thus, the findings in this earlier paper are congruent with the CLML.
 
-## CLML vs Validation Loss
+### CLML vs Validation Loss
 
 A different way of examining what the CLML does is to note that the more data a model has trained with, the more its predictions for different samples will become independent. This follows from the model converging to a delta distribution and is, in particular, valid when using a Laplace approximation to the posterior, as is the case here.
 
@@ -544,7 +545,7 @@ Sadly, the paper does not compare the validation loss and their CLML estimate. T
 👁️‍🗨️ In the updated version of the paper, the authors compute both the CLML and the non-BMA validation loss. Overlaying the two seems to point towards the validation loss and the CLML being exactly equal for one model type (CNNs). The results are not entirely consistent between *v1* and *v2* of the paper. In particular, the CLML in *v2* seems to perform worse than the BMA validation loss in *v1*.
 </aside>
 
-## Laplace Approximation for LML vs Sampling for CLML
+### Laplace Approximation for LML vs Sampling for CLML
 
 There might be an apple vs oranges comparison because the LML is computed using the LA while the CLML is computed via sampling:
 
@@ -559,7 +560,7 @@ where $$w_k \sim p(\omega_k \mid \mathcal{D}_{<m}, \mathcal M)$$ are parameter s
 ❓ One could also compute the CLML via the LA: the CLML is just the LML for 100% of the training data when using the model with 80% of the training data as prior. It would be interesting to investigate this estimate, too.
 </aside>
 
-## Unexpected Anti-Correlation
+### Unexpected Anti-Correlation
 
 Previously, we have highlighted the finding from Section 5 that:
 
@@ -602,7 +603,7 @@ Given this, LML and generalization loss should correlate positively with suffici
 </aside>
 
 
-## DNN Experiments: Validation Loss vs CLML
+### DNN Experiments: Validation Loss vs CLML
 
 Lastly, the initially published DNN experiments in the paper did not compute the CLML but the validation loss. This has been fixed in *v2* of the paper.
 
@@ -692,7 +693,7 @@ def get_cmll(bma_probs, all_ys, eps=1e-4):
 The DNN experiments in Section 5 and Section 6 of the paper (*v1*) thus did not estimate the CLML per-se but computed the BMA validation loss of a partially trained model (80%) and find that this correlates positively with the test accuracy and test log-likelihood of the fully trained model (at 100%).
 This is not surprising because it is well-known that the validation loss of a model trained 80% of the data correlates positively with the test accuracy (and generalization loss).
 
-# Conclusion
+## Conclusion
 
 It would be interesting to determine how the CLML estimated via LA compares with the LML estimated via LA. Similarly, comparing the CLML to the validation loss would be interesting.
 (However, the expectation is that an estimate via sampling will not be different very different from the validation loss simply because sampling-based approaches do not seem to be working well for estimating joint predictive distributions.)
@@ -707,7 +708,7 @@ Overall, the paper makes a significant contribution to the field of Bayesian mod
 
 ---
 
-# Author Response
+## Author Response
 
 The following response sadly seems to target the first draft mainly. However, it is also helpful for the final blog post and provides additional context.
 
@@ -741,7 +742,7 @@ Best wishes,\\
 Sanae, Pavel, Greg, Micah, Andrew
 </blockquote>
 
-##  Ablation: CLML vs. BMA Validation Loss vs. (non-BMA) Validation Loss
+###  Ablation: CLML vs. BMA Validation Loss vs. (non-BMA) Validation Loss
 
 Let us examine the new results: 
 
@@ -793,7 +794,7 @@ Yet what is also surprising is how well the BMA validation loss does vs. the CLM
 Does this mean we should use the BMA validation loss rather than estimating the CLML for DNNs?
 </aside>
 
-## Ablation: LA Sample Size
+### Ablation: LA Sample Size
 
 Secondly, when we compare the reported values between BMA validation loss and CLML, we notice that the CLML is lower than the BMA validation loss by half a nat for $$\lambda=10^2$$ and generally for CNNs.
 
