--- a/assets/bibliography/2024-05-07-clml.bib
+++ b/assets/bibliography/2024-05-07-clml.bib
@@ -64,3 +64,12 @@
     url = {https://doi.org/10.1093/biomet/asz077},
     eprint = {https://academic.oup.com/biomet/article-pdf/107/2/489/33217997/asz077.pdf},
 }
+
+@inproceedings{ru2021speedy,
+title={Speedy Performance Estimation for Neural Architecture Search},
+author={Binxin Ru and Clare Lyle and Lisa Schut and Miroslav Fil and Mark van der Wilk and Yarin Gal},
+booktitle={Advances in Neural Information Processing Systems},
+editor={A. Beygelzimer and Y. Dauphin and P. Liang and J. Wortman Vaughan},
+year={2021},
+url={https://openreview.net/forum?id=8V2hZW0d2aS}
+}
