--- a/_posts/2024-05-07-clml.md
+++ b/_posts/2024-05-07-clml.md
@@ -245,7 +245,7 @@ margin-bottom: .5em;
 
 > To decide between different possible explanations, we heavily rely on a notion of Occam’s razor — that the “simplest” explanation of data consistent with our observations is most likely to be true.
 
-The marginal likelihood, also known as model evidence $$p(\mathcal{D} \mid \mathcal{M}_i)$$ for different hypotheses $$\mathcal{M}_i$$, captures this notion. **Other things considered equal,** the highest model evidence points us towards the best hypothesis given data $$\mathcal{D}$$. The paper cites [an illustrative example from chapter 28](https://www.inference.org.uk/itprnn/book.pdf#page=355) of David MacKay’s ["Information Theory, Inference, and Learning Algorithms”](http://www.inference.org.uk/mackay/itila/book.html):
+The marginal likelihood, also known as model evidence $$p(\mathcal{D} \mid \mathcal{M}_i)$$ for different hypotheses $$\mathcal{M}_i$$, captures this notion. **Other things considered equal,** the highest model evidence points us towards the best hypothesis given data $$\mathcal{D}$$. The paper cites [an illustrative example from chapter 28](https://www.inference.org.uk/itprnn/book.pdf#page=355) of David MacKay’s ["Information Theory, Inference, and Learning Algorithms”](http://www.inference.org.uk/mackay/itila/book.html)<d-cite key="mackay2003information"></d-cite>:
 
 {% capture caption %}
 Excerpt from page 343 in David MacKay’s "Information Theory, Inference, and Learning Algorithms.”
@@ -256,7 +256,7 @@ The **log marginal likelihood (LML)**, which is examined in this paper, is simpl
 
 $$\log p(\mathcal{D} \mid \mathcal{M}_i).$$
 
-The papers offers a concise pitch in its introduction:
+The papers offers a concise summary in its introduction:
 
 > we aim to fundamentally re-evaluate whether the marginal likelihood is the right metric for predicting the generalization of trained models, and learning hyperparameters. We argue that it does a good job of prior hypothesis testing, which is exactly aligned with the question it is designed to answer. **However, we show that the marginal likelihood is only peripherally related to the question of which model we expect to generalize best after training, with significant implications for its use in model selection and hyperparameter learning.**
 
@@ -278,10 +278,9 @@ Given the above, the case for the marginal likelihood in the paper focuses on:
 
 ### General Pitfalls
 
-For the paper, the pitfalls are manifold. The most important is the claim that:
+For the paper, the pitfalls of LML are manifold. The most important is the claim that:
 
 > **Marginal Likelihood is not generalization**
-> 
 
 The following explanation is helpful:
 
@@ -335,7 +334,7 @@ So, in hypothesis testing, we want to determine which model class (hypothesis) p
 
 Computing the marginal likelihood via sampling is generally intractable for (B)NNs. Estimating it from a prior, usually highly uninformative distribution leads to high-variance estimates when performing Monte Carlo sampling compared to sampling from the posterior distribution, which is more practical. The latter is the approach followed by the paper for the CLML using a Laplace approximation of the posterior.
 
-A **Laplace approximation (LA)** estimates the posterior distribution by fitting a Gaussian on the second-order Taylor expansion. We can draw parameter samples from it or compute its entropy to approximate the posterior uncertainty. 
+A **Laplace approximation (LA)** estimates the posterior distribution by fitting a Gaussian on the second-order Taylor expansion of the MLE (maximum likelihood) or MAP (maximum-a-posteriori) estimate <d-cite key="murphy2012machine"></d-cite>. We can draw parameter samples from it or compute its entropy to approximate the posterior uncertainty. 
 
 <aside class="box-note l-body" markdown="1">
 💡 The LA can be motivated by the [Cramér–Rao bound](https://en.wikipedia.org/wiki/Cram%C3%A9r%E2%80%93Rao_bound) for statistical models, which have "true model parameters." Essentially, the bound tells us that as we take more and more data into account, our posterior will concentrate around the true model parameters for a well-specified model and thus become uni-modal.
@@ -444,8 +443,7 @@ $$
 
 Hence, maximizing $$p(\mathcal{D} \mid \mathcal{M}_i)$$ is not sufficient depending on what model prior we use.
 
-In particular, the **minimum description length (MDL)** approach states that we want to select the model that minimizes both the length of describing its parameters and the data. 
-
+In particular, the **minimum description length (MDL)** approach states that we want to select the model that minimizes both the length of describing its parameters and the data <d-cite key="cover1999elements"></d-cite>. 
 That is, MDL is about compressing the model and data:
 
 $$
@@ -463,7 +461,7 @@ $$
 and we can drop $$H[\mathcal{D}]$$ as it is independent of the model.
 
 By ignoring the model complexity when we only use the LML, we might potentially ignore an essential part of Occam’s razor and the MDL principle.
-However, many other papers also ignore the model complexity and assume a uniform model prior. A uniform prior is valid, for example, when choosing specific hyperparameters. Moreover, estimating a model's description length is challenging and an open problem. However, the LML only makes sense for model selection when comparing models of equal complexity. 
+However, many other papers also ignore the model complexity and assume a uniform model prior. A uniform prior is valid, for example, when choosing specific hyperparameters. Moreover, estimating a model's description length is challenging and an open problem. The LML only makes sense for model selection when comparing models of equal complexity. 
 
 ### Comparison to Prior Art
 
