--- a/assets/bibliography/2024-05-07-clml.bib
+++ b/assets/bibliography/2024-05-07-clml.bib
@@ -73,3 +73,24 @@ editor={A. Beygelzimer and Y. Dauphin and P. Liang and J. Wortman Vaughan},
 year={2021},
 url={https://openreview.net/forum?id=8V2hZW0d2aS}
 }
+
+@book{mackay2003information,
+  title={Information theory, inference and learning algorithms},
+  author={MacKay, David JC},
+  year={2003},
+  publisher={Cambridge university press}
+}
+
+@book{murphy2012machine,
+  title={Machine learning: a probabilistic perspective},
+  author={Murphy, Kevin P},
+  year={2012},
+  publisher={MIT press}
+}
+
+@book{cover1999elements,
+  title={Elements of information theory},
+  author={Cover, Thomas M},
+  year={1999},
+  publisher={John Wiley \& Sons}
+}
