Add more conclusion

--- a/_posts/2024-05-07-clml.md
+++ b/_posts/2024-05-07-clml.md
@@ -840,9 +840,13 @@ Tweets by [@RobertRosenba14](https://twitter.com/RobertRosenba14) and [@stanisla
 {% twitter https://twitter.com/stanislavfort/status/1529865444701577216 %}
 {% twitter https://twitter.com/RobertRosenba14/status/1517465854157500419 %}
 
-Given the above, it is fair to say that the estimate of the CLML is probably not as good as hoped, and further experiments might be needed to tease out when the CLML provides more value than the BMA validation loss. Note, however, that this question has not been explicitly examined in the paper. Instead, the paper compares LML and CLML with distinct estimation methods for DNNs.
+Given the above, it is fair to say that the estimate of the CLML is probably not as good as hoped, and further experiments might be needed to tease out when the CLML provides more value than the BMA validation loss. Note, however, that this question has not been explicitly examined in the paper. Instead, the paper only compares LML and CLML with distinct estimation methods for DNNs.
 
 <aside class="box-error l-body" markdown="1">
 🔥 Given the overall results of CLML vs. LML and the observation that the BMA validation loss seems to work very well for DNNs, even better than the CLML estimate, it might be worth ablating the performance of the validation loss for DKL and other methods as a separate research question. Then, we can see what we gain from the CLML exactly. 
-*Maybe a validation set "is all you need"---after all---the validation loss is easier to estimate.* But then, we knew all along that validation sets work really well for DNNs all along, despite them being "less principled"?
+*Maybe a validation set "is all you need"---after all, the validation loss is easier to estimate.* But then, we knew all along that validation sets work really well for DNNs all along, despite them being less principled.
 </aside>
+
+While this post raises questions about the comparative advantages of CLML over the traditional validation loss, it is important to recognize that ongoing research may uncover scenarios where CLML's Bayesian foundations and theoretical underpinnings provide distinct benefits. Future studies could illuminate these contexts and further validate the utility of CLML in model selection and evaluation. 
+Alternative model selection criteria such as AIC, BIC, or cross-validation also play a significant role in the field. Each method comes with its own set of assumptions and trade-offs, and the choice of the best criterion may depend on the specific application and data characteristics.
+Thus, despite the critiques presented, which also focused in parts on the experimental results for DNNs, the paper makes a valuable contribution to the field by rigorously examining the role of LML in model selection beyond DNNs and introducing the concept of CLML. Its thorough analysis and innovative approach provide a foundation for future research and potential advancements in Bayesian model evaluation.
