Update TOC. Slightly re-order and polish conclusion a lot more.

--- a/_posts/2024-05-07-clml.md
+++ b/_posts/2024-05-07-clml.md
@@ -41,18 +41,32 @@ bibliography: 2024-05-07-clml.bib
 #     for hyperlinks within the post to work correctly. 
 #   - please use this format rather than manually creating a markdown table of contents.
 toc:
-  - name: Equations
-  - name: Images and Figures
+  - name: "Introduction"
     subsections:
-    - name: Interactive Figures
-  - name: Citations
-  - name: Footnotes
-  - name: Code Blocks
-  - name: Diagrams
-  - name: Tweets
-  - name: Layouts
-  - name: Other Typography?
-
+    - name: "Paper Details"
+  - name: "Why?"
+  - name: "How?"
+    subsections:
+    - name: "Use-cases"
+    - name: "General Pitfalls"
+    - name: "Estimating LML via the Laplace Approximation"
+    - name: "Conditional Marginal Likelihood"
+    - name: "On Training Speed and Learning Curves"
+    - name: "Model Selection"
+  - name: "And?"
+    subsections:
+    - name: "Ignoring Model Priors"
+    - name: "Comparison to Prior Art"
+    - name: "CLML vs Validation Loss"
+    - name: "Laplace Approximation for LML vs Sampling for CLML"
+    - name: "Unexpected Anti-Correlation"
+    - name: "DNN Experiments: Validation Loss vs CLML"
+  - name: "Author Response"
+    subsections:
+    - name: "Ablation: CLML vs. BMA Validation Loss vs. (non-BMA) Validation Loss"
+    - name: "Ablation: LA Sample Size"
+  - name: "Conclusion"
+  
 # Below is an example of injecting additional post-specific styles.
 # This is used in the 'Layouts' section of this post.
 # If you use this post as a template, delete this _styles block.
@@ -182,7 +196,7 @@ Overall, the paper looks at many more settings, particularly deep kernel learnin
 👁️‍🗨️ This review is based on [v1 of the paper](https://arxiv.org/abs/2202.11678v1)<d-cite key="lotfi2022bayesian"></d-cite>. After reaching out to the authors, they have [updated the paper, expanded the discussion section](/assets/2024-05-07/bmsmlg_v1_v2_version_comparison.pdf), and replied to a draft of this post. Two drafts were shared with the authors (on 2022/5/30 & 31, respectively) before their reply (on 2022/6/3), and their comments refer to the first draft. This post is the second draft, except for minor edits. Additional boxes have been added and marked with "👁️‍🗨️" to refer to the authors' response, which is included at the end and augmented with additional thoughts given the updated experiments.
 </aside>
 
-## Details
+### Paper Details
 
 | | Bayesian Model Selection, the Marginal Likelihood, and Generalization |
 | :---        |    :----  |
@@ -415,7 +429,7 @@ In particular, for neural networks, the paper reports the following interesting 
 
 (where **BMA** stands for **Bayesian Model Average**, i.e., marginalizing over the posterior parameters)
 
-## Model Selection
+### Model Selection
 
 To show the advantages of the CLML over the LML, the paper examines the correlation with the generalization performance of 25 CNN and ResNet architectures on CIFAR-10 and CIFAR-100:
 
@@ -691,21 +705,6 @@ def get_cmll(bma_probs, all_ys, eps=1e-4):
 The DNN experiments in Section 5 and Section 6 of the paper (*v1*) thus did not estimate the CLML per-se but computed the BMA validation loss of a partially trained model (80%) and find that this correlates positively with the test accuracy and test log-likelihood of the fully trained model (at 100%).
 This is not surprising because it is well-known that the validation loss of a model trained 80% of the data correlates positively with the test accuracy (and generalization loss).
 
-## Conclusion
-
-It would be interesting to determine how the CLML estimated via LA compares with the LML estimated via LA. Similarly, comparing the CLML to the validation loss would be interesting.
-(However, the expectation is that an estimate via sampling will not be different very different from the validation loss simply because sampling-based approaches do not seem to be working well for estimating joint predictive distributions.)
-
-Further, the choice of the cutoff parameter $m$ in CLML and its impact on the results could be explored---while the authors mention that larger values of $m$ generally lead to better performance, it would be helpful to have more guidance on how to select $m$ in practice. Likewise (and more details on this follow below), a comparison of CLML with other model selection criteria beyond ML, such as cross-validation or information criteria like AIC and BIC.
-
-Overall, the paper makes a significant contribution to the field of Bayesian model selection by questioning the reliance on the LML and proposing an alternative that may be better suited for deep learning. The empirical results are compelling, and the paper opens up avenues for further research on model selection criteria that are aligned with generalization performance.
-
-<aside class="box-note l-body" markdown="1">
-👉 Beyond providing a more principled view on using a validation set and a beautiful exposition of previous literature and various pitfalls and use-cases, this paper surfaces exciting research questions---especially in the small-data regime. Several follow-up experiments could provide further insights.
-</aside>
-
----
-
 ## Author Response
 
 The following response sadly seems to target the first draft mainly. However, it is also helpful for the final blog post and provides additional context.
@@ -842,11 +841,25 @@ Tweets by [@RobertRosenba14](https://twitter.com/RobertRosenba14) and [@stanisla
 
 Given the above, it is fair to say that the estimate of the CLML is probably not as good as hoped, and further experiments might be needed to tease out when the CLML provides more value than the BMA validation loss. Note, however, that this question has not been explicitly examined in the paper. Instead, the paper only compares LML and CLML with distinct estimation methods for DNNs.
 
+## Conclusion
+
+It would be interesting to determine how the CLML estimated via LA compares with the LML estimated via LA. Similarly, comparing the CLML to the validation loss would be interesting.
+(However, the expectation is that an estimate via sampling will not be different very different from the validation loss simply because sampling-based approaches do not seem to be working well for estimating joint predictive distributions.)
+
 <aside class="box-error l-body" markdown="1">
 🔥 Given the overall results of CLML vs. LML and the observation that the BMA validation loss seems to work very well for DNNs, even better than the CLML estimate, it might be worth ablating the performance of the validation loss for DKL and other methods as a separate research question. Then, we can see what we gain from the CLML exactly. 
-*Maybe a validation set "is all you need"---after all, the validation loss is easier to estimate.* But then, we knew all along that validation sets work really well for DNNs all along, despite them being less principled.
+*Maybe a validation set "is all you need"---after all, the validation loss is easier to estimate.* But then, we knew all along that validation sets work really well for DNNs, despite them being less principled.
 </aside>
+
+Further, the choice of the cutoff parameter $m$ in CLML and its impact on the results could be explored---while the authors mention that larger values of $m$ generally lead to better performance, it would be helpful to have more guidance on how to select $m$ in practice. Likewise (and more details on this follow below), a comparison of CLML with other model selection criteria beyond ML, such as cross-validation or information criteria like AIC and BIC.
 
 While this post raises questions about the comparative advantages of CLML over the traditional validation loss, it is important to recognize that ongoing research may uncover scenarios where CLML's Bayesian foundations and theoretical underpinnings provide distinct benefits. Future studies could illuminate these contexts and further validate the utility of CLML in model selection and evaluation. 
 Alternative model selection criteria such as AIC, BIC, or cross-validation also play a significant role in the field. Each method comes with its own set of assumptions and trade-offs, and the choice of the best criterion may depend on the specific application and data characteristics.
-Thus, despite the critiques presented, which also focused in parts on the experimental results for DNNs, the paper makes a valuable contribution to the field by rigorously examining the role of LML in model selection beyond DNNs and introducing the concept of CLML. Its thorough analysis and innovative approach provide a foundation for future research and potential advancements in Bayesian model evaluation.
+Thus, despite the critiques presented, which also focused in parts only on the experimental results for DNNs, the paper makes a valuable contribution to the field by rigorously examining the role of LML in model selection beyond DNNs and introducing the concept of CLML. Its thorough analysis and innovative approach provide a foundation for future research and potential advancements in Bayesian model evaluation.
+
+<aside class="box-note l-body" markdown="1">
+👉 Beyond providing a more principled view on using a validation set and a beautiful exposition of previous literature and various pitfalls and use-cases, this paper surfaces exciting research questions---especially in the small-data regime. Several follow-up experiments could provide further insights.
+</aside>
+
+Overall, the paper makes a significant contribution to the field of Bayesian model selection by questioning the reliance on the LML and proposing an alternative that may be better suited for deep learning. The empirical results are compelling, and the paper opens up avenues for further research on model selection criteria that are aligned with generalization performance.
+
