--- a/assets/bibliography/2024-05-07-mode-switching.bib
+++ b/assets/bibliography/2024-05-07-mode-switching.bib
@@ -257,3 +257,12 @@
   journal={arXiv preprint arXiv:1604.08320},
   year={2016}
 }
+
+@inproceedings{van2016deep,
+  title={Deep reinforcement learning with double q-learning},
+  author={Van Hasselt, Hado and Guez, Arthur and Silver, David},
+  booktitle={Proceedings of the AAAI conference on artificial intelligence},
+  volume={30},
+  number={1},
+  year={2016}
+}
