--- a/assets/bibliography/2024-05-07-mode-switching.bib
+++ b/assets/bibliography/2024-05-07-mode-switching.bib
@@ -266,3 +266,21 @@
   number={1},
   year={2016}
 }
+
+@inproceedings{cobbe2019quantifying,
+  title={Quantifying generalization in reinforcement learning},
+  author={Cobbe, Karl and Klimov, Oleg and Hesse, Chris and Kim, Taehoon and Schulman, John},
+  booktitle={International Conference on Machine Learning},
+  pages={1282--1289},
+  year={2019},
+  organization={PMLR}
+}
+
+@inproceedings{cobbe2020leveraging,
+  title={Leveraging procedural generation to benchmark reinforcement learning},
+  author={Cobbe, Karl and Hesse, Chris and Hilton, Jacob and Schulman, John},
+  booktitle={International conference on machine learning},
+  pages={2048--2056},
+  year={2020},
+  organization={PMLR}
+}
